--- a/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
@@ -101,10 +101,10 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
-                                            <state key="normal" title="女" image="ic_Shopping_Choice_pressed">
+                                            <state key="normal" title="女" image="ic_Shopping_Choice_normal">
                                                 <color key="titleColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
-                                            <state key="selected" image="ic_Shopping_Choice_normal"/>
+                                            <state key="selected" image="ic_Shopping_Choice_pressed"/>
                                             <connections>
                                                 <action selector="genderGail:" destination="-1" eventType="touchUpInside" id="pef-iH-J1i"/>
                                             </connections>
@@ -119,7 +119,7 @@
                                             </state>
                                             <state key="selected" image="ic_Shopping_Choice_pressed"/>
                                             <connections>
-                                                <action selector="genderBooy:" destination="-1" eventType="touchUpInside" id="uAy-6h-rKO"/>
+                                                <action selector="genderBooy:" destination="-1" eventType="touchUpInside" id="zWe-DK-9E6"/>
                                             </connections>
                                         </button>
                                     </subviews>
